--- a/United Kindom.html
+++ b/United Kindom.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/DopStyle.css">
+	<link rel="stylesheet" type="text/css" href="DopStyle.css">
 </head>
 <body style="background: url('img/UK.png') no-repeat center top;">
 	<header class="header">
