--- a/index.html
+++ b/index.html
@@ -191,6 +191,6 @@
 		</div>
 	</footer>
 
-	<script  type="text/javascript" src="js/1.js"></script>
+	<script  type="text/javascript" src="1.js"></script>
 </body>
 </html>
