--- a/gallery.html
+++ b/gallery.html
@@ -59,8 +59,9 @@
 			<p class="Phototrip">2022 © Phototrip</p>
 		</div>
 	</footer>
-
-	<script type="text/javascript" src="js/xml.js"></script>
+          <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+          <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+	  <script type="text/javascript" src="js/xml.js"></script>
 
 </body>
 </html>
