--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
 	</footer>
           <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
           <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-	  <script type="text/javascript" src="js/xml.js"></script>
+	  <script type="text/javascript" src="xml.js"></script>
 
 </body>
 </html>
