--- a/gallery.html
+++ b/gallery.html
@@ -59,8 +59,8 @@
 			<p class="Phototrip">2022 © Phototrip</p>
 		</div>
 	</footer>
-          <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-          <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+          <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+          <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	  <script type="text/javascript" src="xml.js"></script>
 
 </body>
